# libflorid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md
.github/workflows/: python-test.yml  test.yml
cmake/: FindGoogleTest.cmake  SDKDependencies.cmake
cmake/Modules/: FindAsio.cmake
examples/: 0_active_joint_control.cpp  0_generate_consecutive_motions.cpp  0_joint_point_to_point_motion.cpp  0_joint_velocity_motion.cpp  0_send_cartesian.cpp  0_send_joint.cpp  0_switch_control_mode.cpp  1_cartesian_impedance_control.cpp  1_force_control.cpp  1_joint_impedance_control.cpp  1_motion_with_control.cpp  CMakeLists.txt  examples_common.hpp
examples/active_joint_control/: CMakeLists.txt  main.cpp
examples/cartesian_impedance_control/: CMakeLists.txt  main.cpp
examples/echo_arm_state/: CMakeLists.txt  main.cpp
examples/echo_robot_state/: CMakeLists.txt  main.cpp
examples/force_control/: CMakeLists.txt  main.cpp
examples/generate_consecutive_motions/: CMakeLists.txt  main.cpp
examples/joint_impedance_control/: CMakeLists.txt  main.cpp
examples/joint_point_to_point_motion/: CMakeLists.txt
examples/joint_velocity_motion/: CMakeLists.txt  main.cpp
examples/motion_with_control/: CMakeLists.txt  main.cpp
examples/send/: CMakeLists.txt  main.cpp
examples/send_cartesian/: CMakeLists.txt  main.cpp
examples/send_joint/: CMakeLists.txt  main.cpp
examples/switch_control_mode/: CMakeLists.txt  main.cpp
include/florid/: Arm.hpp  ArmConfig.hpp  Frame.hpp  Model.hpp
include/florid/core/: ActiveControl.hpp  ArmControl.hpp  ArmCore.hpp  Duration.hpp  Errors.hpp  Exceptions.hpp  RobotControl.hpp  traits.hpp  types.hpp
include/florid/detail/: Seqlock.hpp  TcpClient.hpp  Transport.hpp  UdpClient.hpp  tick.hpp  timestamp.hpp
include/florid/traits/: PantheraTraits.hpp  WillowTraits.hpp
include/florid/util/: FixedString.hpp  math.hpp
protocols/: CMakeLists.txt
protocols/cmake/: FindGoogleTest.cmake
protocols/include/florid/protocols/: cmd.hpp  common.hpp  config_cmd.hpp  dispatcher.hpp  parser.hpp  protocols.hpp  status.hpp  version.hpp
protocols/tests/: CMakeLists.txt  test_dispatcher.cpp  test_packets.cpp  test_parser.cpp  test_version.cpp
pyflorid/: CMakeLists.txt  __init__.py
pyflorid/examples/: 0_robot_get_state.py  1_PD_control.py  1_PosVel_control.py  1_forward_kinematics_test.py  2_Jointimpendence_control_with_gra_pd.py  2_gravity_compensation_control.py  2_keyboard_cartesian_pose_control.py  4_computed_torque_sin_j12345.py  _common.py  echo_arm_state.py
pyflorid/examples/plots/: computed_torque_j12345_20260601_160352.json  computed_torque_j12345_20260601_161408.json  computed_torque_j12345_20260601_161555.json  computed_torque_j12345_20260601_161811.json  computed_torque_j12345_20260601_161943.json
pyflorid/src/: pyflorid.cpp
scripts/: urdf2traits.py
src/: Arm.cpp  CMakeLists.txt  Model.cpp
src/core/: ActiveControl.cpp  ArmCore.cpp
src/detail/: TcpClient.cpp  UdpClient.cpp  tick_std.cpp  timestamp_std.cpp
tests/: CMakeLists.txt  test_active_control.cpp  test_model.cpp
