add_subdirectory(send)
add_subdirectory(send_joint)
add_subdirectory(send_cartesian)
add_subdirectory(active_joint_control)
add_subdirectory(echo_robot_state)
add_subdirectory(joint_impedance_control)
add_subdirectory(cartesian_impedance_control)
add_subdirectory(force_control)
target_include_directories(florid_example_echo_robot_state PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(florid_example_joint_impedance_control PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(florid_example_cartesian_impedance_control PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(florid_example_force_control PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(florid_example_active_joint_control PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(willow_example_send PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(willow_example_send_joint PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(willow_example_send_cartesian PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})