function(add_florid_example target source)
    add_executable(${target} ${source})
    target_compile_features(${target} PUBLIC cxx_std_20)
    target_link_libraries(${target} PUBLIC asio ${PROJECT_NAME})
    target_include_directories(${target} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
    set_target_properties(${target} PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/examples
    )
endfunction()

add_florid_example(willow_example_send 0_send.cpp)
add_florid_example(willow_example_send_joint 0_send_joint.cpp)
add_florid_example(willow_example_send_cartesian 0_send_cartesian.cpp)
add_florid_example(florid_example_active_joint_control 0_active_joint_control.cpp)
add_florid_example(florid_example_echo_arm_state 0_echo_arm_state.cpp)
add_florid_example(florid_example_joint_impedance_control 1_joint_impedance_control.cpp)
add_florid_example(florid_example_cartesian_impedance_control 1_cartesian_impedance_control.cpp)
add_florid_example(florid_example_force_control 1_force_control.cpp)
add_florid_example(florid_example_consecutive_motions 0_generate_consecutive_motions.cpp)
add_florid_example(florid_example_motion_with_control 1_motion_with_control.cpp)
add_florid_example(florid_example_joint_velocity_motion 0_joint_velocity_motion.cpp)
add_florid_example(florid_example_point_to_point 0_joint_point_to_point_motion.cpp)
add_florid_example(florid_example_switch_control_mode 0_switch_control_mode.cpp)
