add_executable(florid_example_joint_velocity_motion main.cpp)
target_compile_features(florid_example_joint_velocity_motion PUBLIC cxx_std_20)
target_link_libraries(florid_example_joint_velocity_motion PUBLIC asio ${PROJECT_NAME})
target_include_directories(florid_example_joint_velocity_motion PRIVATE ${CMAKE_SOURCE_DIR}/examples)
