add_executable(florid_example_motion_with_control main.cpp)
target_compile_features(florid_example_motion_with_control PUBLIC cxx_std_20)
target_link_libraries(florid_example_motion_with_control PUBLIC asio ${PROJECT_NAME})
target_include_directories(florid_example_motion_with_control PRIVATE ${CMAKE_SOURCE_DIR}/examples)
